# bookbook

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 1c9edbbf26a2_add_new_tag_and_intermediate_table_.py  37b194708bfc_add_user_uid_foreign_key_relationship_.py  47e3077fe92f_restauracion.py  760618e126e7_init.py  8530f562282f_add_roles_to_user.py  9e0c64c03b50_add_new_review_table.py  b763a61265ca_add_review_table.py  c81c9a5489bd_add_new_tag_and_booktag_tables.py  cecc8248573e_add_password_hashed_field.py
src/: __init__.py  celery_tasks.py  errors.py  mail.py  middleware.py
src/aa_generics/: tips.md
src/application/dtos/: external_book_dtos.py  user_dtos.py
src/application/services/: book_service.py  review_service.py  user_service.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/domain/book/: book.py
src/domain/book/value_objects/: book_description.py  book_isbn.py  book_pagecount.py  book_subtitle.py  book_title.py
src/domain/book_models/: book.py  review.py  tags.py
src/domain/exceptions/: book_exceptions.py  review_exception.py  tags_exception.py  user_exceptions.py
src/domain/models/: book.py  pending.py  review.py  tags.py
src/domain/review/: review.py
src/domain/tag/: tags.py
src/domain/user/: user.py
src/infrastructure/auth/: password.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  service.py
src/templates/: reset_password.html  verify_account.html  verify_email.html
src/utils/: template_manager.py
(+7 files in other folders)
