[project]
name = "fastapi_p1"
version = "0.2.0"
description = "FastAPI Adventure"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.22",
]

[tool.ruff]
[tool.ruff.format]
quote-style = "single"
