[project]
name = "fastapi_p1"
version = "0.2.0"
description = "FastAPI Adventure"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asgiref>=3.8.1",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi-mail>=1.4.2",
    "fastapi[standard]>=0.115.6",
    "flower>=2.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "redis>=5.2.1",
    "sqlmodel>=0.0.22",
]

[tool.ruff]
[tool.ruff.format]
quote-style = "single"
